Chnage all index files in docs to non x equivilent

--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -93,7 +93,7 @@ tps react-component path/to/dir/<component-name>
 
 ```txt title="Creates"
 | - <component-name>
-	| - index.jsx (optional)
+	| - index.js (optional)
 	| - <component-name>.jsx
 	| - <component-name>.css (optional)
 	| - <component-name>.test.js (optional)
@@ -114,7 +114,7 @@ Will produces something like the following:
 
 ```txt
 | - Nav
-	| - index.jsx
+	| - index.js
 	| - Nav.jsx
 	| - Nav.css
 ```
@@ -133,7 +133,7 @@ Will produces something like the following:
 | - src/
 	| - components/
 		| - Nav
-			| - index.jsx
+			| - index.js
 			| - Nav.jsx
 			| - Nav.css
 ```
@@ -247,7 +247,7 @@ following:
 		| - components/
 			// highlight-start
 			| - Nav/
-				| - index.jsx
+				| - index.js
 				| - Nav.jsx
 				| - Nav.css
 			// highlight-end
@@ -271,7 +271,7 @@ following:
 		| - components/
 			// highlight-start
 			| - nav-item/
-				| - index.jsx
+				| - index.js
 				| - nav-item.jsx
 				| - nav-item.css
 			// highlight-end
@@ -702,7 +702,7 @@ Depending on your answers, it would produce something to the following:
 
 ```txt
 | - Nav
-	| - index.tsx
+	| - index.ts
 	| - Nav.tsx
 	| - Nav.css
 ```
