--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -1,3 +1,14 @@
+---
+description: Template to generate react component
+keywords:
+  - react
+  - react component
+  - react component scaffold
+  - react component boilerplate
+  - react component generator
+  - react component typescript
+---
+
 import { TemplateOptions } from '@site/docs/components/templateOptions';
 import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
