--- a/docs/docs/api/settings/prompt.mdx
+++ b/docs/docs/api/settings/prompt.mdx
@@ -17,6 +17,10 @@ interface Prompt {
 	 */
 	name: string;
 	/**
+	 * Prompt description
+	 */
+	description: string;
+	/**
 	 * Message you would like to show user
 	 */
 	message: string;
