--- a/docs/docs/main/intro.mdx
+++ b/docs/docs/main/intro.mdx
@@ -45,10 +45,7 @@ the whole library and not individual templates you can create.
 Learn how to create your first template.
 
 <div>
-	{/* eslint-disable react/self-closing-comp */}
-  <Link className={styles.btn} to="./create-new-template/">
-    visit
-  </Link>
+	<Link className={styles.btn} to="./create-new-template/">visit</Link>
 </div>
 </div>
 
@@ -59,9 +56,8 @@ Learn how to create your first template.
 Explore our library of existing templates.
 
 <div>
-	<Link className={styles.btn} to="./templates/">
-		visit
-	</Link>
+	{/* prettier-ignore */}
+	<Link className={styles.btn} to="./templates/">visit</Link>
 </div>
 
 </div>
